--- a/src/Keyboard/Keyboard.css
+++ b/src/Keyboard/Keyboard.css
@@ -1,7 +1,7 @@
 #keyboard {
   height: 15.25rem;
   width: 47.5rem;
-  margin: 0.5rem auto;
+  margin: 1rem;
   padding: 3rem 0 0 3.5rem;
   position: relative;
   border: 1px solid var(--keyboard-border);
